# College-Projects

./: README.md
ED - Estruturas de Dados/ED_EN_8220114_8220256/: settings.gradle
ED - Estruturas de Dados/javadoc/: allclasses-index.html  allpackages-index.html  constant-values.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
LP - Laboratório Programação/LP_8220114/: CMakeLists.txt  comissoes.c  comissoes.h  geral.h  input.c  input.h  listagens.c  listagens.h  lp_8220114.exe.stackdump  main.c  menus.c  mercados.c  mercados.h  vendedor.h  vendedores.c
LP - Laboratório Programação/LP_8220114/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
LP - Laboratório Programação/LP_8220114/nbproject/private/: private.xml
PEI - Processamento Estruturado de Informação/Postman/: Projeto Pei.postman_collection.json
PEI - Processamento Estruturado de Informação/basex/: returnsReport.xqm  salesReport.xqm
PEI - Processamento Estruturado de Informação/mongoDB scripts/: 1 - Setup de DB e coleções.txt  2 - Informação de Clientes.txt  3 - Informação de Produtos.txt  4 - Informação de Vendas.txt  5 - Informação de Devoluções.txt
PEI - Processamento Estruturado de Informação/xsdSchema/: CustomerDetails.xsd  GeneralInfo.xsd  MonthlyReturnsReport.xsd  MonthlySalesReport.xsd  ProductDetails.xsd  (+2 more)
SO - Sistemas Operativos/: SO_Report.docx
(+535 files in other folders)
